[tool.poetry]
name = "GLPN_depth_estimation"
version = "0.1.0"
description = ""
authors = ["Danielle Ben Bashat <daniellebenba@gmail.com>"]
[tool.poetry.dependencies]
python = ">=3.8, <3.11"
protobuf = "^3.19.4"
code-loader = "1.0.143.dev4"
transformers = "^4.43.3"
google-cloud-storage = "^2.18.0"
onnxruntime = "^1.18.1"
code-loader-helpers = "^1.0.20"
pandas = "2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

